# example_app_exporter

./: main.py  pyproject.toml
app_exporter/: base_exporter.py  exporter_factory.py
exporters/: dict_exporter.py  dummy_exporter.py
